# zk-gamekit

./: .gitignore  README.md
contracts/: Cargo.toml
contracts/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/src/verifier/: groth16.rs  mod.rs  types.rs
contracts/sudoku/: Cargo.toml
contracts/sudoku/src/: contract.rs  error.rs  game.rs  lib.rs  msg.rs  state.rs
contracts/sudoku/src/verifier/: groth16.rs  mod.rs  types.rs
frontend/: .env.example  environment.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/new-room/: page.tsx
frontend/app/sudoku/: page.tsx
frontend/components/common/: RoomStatusTag.tsx
frontend/components/common/SearchBar/: SearchBar.tsx
frontend/components/common/icons/: ArrowDownIcon.tsx  IconProps.ts  PeopleIcon.tsx  SearchIcon.tsx
frontend/components/home/: RoomCard.tsx
frontend/components/layout/: Header.tsx
frontend/components/provider/: CosmosChainProvider.tsx
frontend/components/sudoku/: App.tsx  Game.tsx
frontend/styles/: font.ts  theme.ts
frontend/sudoku/: package-lock.json  package.json
frontend/types/: game.ts  room.ts
frontend/utils/: chain.ts
games/sudoku/: Cargo.toml
games/sudoku/elf/: riscv32im-succinct-zkvm-elf  verifying_key_hex
games/sudoku/src/: main.rs
server/: Cargo.toml  proof.json  proof_bytes  public_values_bytes  vk.json
server/src/: main.rs
server/src/games/: mod.rs  sudoku.rs
