[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "2.1.5", features = ["staking"] }
cw-storage-plus = "2.0.0"
thiserror = "2.0.6"
cosmwasm-schema = "2.1.5"
bincode = "1.3.3"

[dev-dependencies]
cw-multi-test = "2.2.0"
serde_json = "1.0.135"