[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
sp1-sdk = { version = "3.0.0", features = ["native-gnark"]}
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.135"

[dev-dependencies]
ethers = "2.0.14"